Ajout full pipeline avec model

--- a/Pipelines.ipynb
+++ b/Pipelines.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.impute import SimpleImputer\n",
     "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
-    "from sklearn.compose import ColumnTransformer"
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.ensemble import RandomForestClassifier as rfc"
    ]
   },
   {
@@ -21,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +52,7 @@
        "                                          steps=[('imputer',\n",
        "                                                  SimpleImputer(add_indicator=False,\n",
        "                                                                copy=True,\n",
-       "                                                                fill_value=None,\n",
+       "                                                                fill_value=0,\n",
        "                                                                missing_values=nan,\n",
        "                                                                strategy='mean',\n",
        "                                                                verbose=0)),\n",
@@ -64,7 +65,7 @@
        "                  verbose=False)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,19 +80,19 @@
     "])\n",
     "\n",
     "numeric_pipe = Pipeline([\n",
-    "    ('imputer', SimpleImputer()),\n",
+    "    ('imputer', SimpleImputer(fill_value=0)),\n",
     "    ('scaler', StandardScaler())\n",
     "])\n",
     "\n",
-    "full_pipe = ColumnTransformer([\n",
+    "preprocess_pipe = ColumnTransformer([\n",
     "    ('cat', categorical_pipe, cat_columns),\n",
     "    ('num', numeric_pipe, num_columns)])\n",
-    "full_pipe"
+    "preprocess_pipe"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +104,49 @@
     }
    ],
    "source": [
-    "print(full_pipe.get_params().keys())"
+    "print(preprocess_pipe.get_params().keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(preprocess_pipe.get_params()['num__imputer__fill_value'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On peut changer les paramatres défini par défaut"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "full_pipe.set_params(num__imputer__fill_value=1)\n",
+    "print(preprocess_pipe.get_params()['num__imputer__fill_value'])"
    ]
   },
   {
@@ -113,6 +156,44 @@
     "Les Pipelines exposent l'ensemble des parametres de chaque 'sous pipeline'. On peut utiliser set_param pour les modifier.\n",
     "Chaque hyperparametre peut etre utiliser dans un gridsearch."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = rfc()\n",
+    "\n",
+    "full_pipe = Pipeline(\n",
+    "    [('pp', preprocess_pipe),\n",
+    "    ('rfc', model)]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['memory', 'steps', 'verbose', 'pp', 'rfc', 'pp__n_jobs', 'pp__remainder', 'pp__sparse_threshold', 'pp__transformer_weights', 'pp__transformers', 'pp__verbose', 'pp__cat', 'pp__num', 'pp__cat__memory', 'pp__cat__steps', 'pp__cat__verbose', 'pp__cat__imputer', 'pp__cat__onehot', 'pp__cat__imputer__add_indicator', 'pp__cat__imputer__copy', 'pp__cat__imputer__fill_value', 'pp__cat__imputer__missing_values', 'pp__cat__imputer__strategy', 'pp__cat__imputer__verbose', 'pp__cat__onehot__categories', 'pp__cat__onehot__drop', 'pp__cat__onehot__dtype', 'pp__cat__onehot__handle_unknown', 'pp__cat__onehot__sparse', 'pp__num__memory', 'pp__num__steps', 'pp__num__verbose', 'pp__num__imputer', 'pp__num__scaler', 'pp__num__imputer__add_indicator', 'pp__num__imputer__copy', 'pp__num__imputer__fill_value', 'pp__num__imputer__missing_values', 'pp__num__imputer__strategy', 'pp__num__imputer__verbose', 'pp__num__scaler__copy', 'pp__num__scaler__with_mean', 'pp__num__scaler__with_std', 'rfc__bootstrap', 'rfc__ccp_alpha', 'rfc__class_weight', 'rfc__criterion', 'rfc__max_depth', 'rfc__max_features', 'rfc__max_leaf_nodes', 'rfc__max_samples', 'rfc__min_impurity_decrease', 'rfc__min_impurity_split', 'rfc__min_samples_leaf', 'rfc__min_samples_split', 'rfc__min_weight_fraction_leaf', 'rfc__n_estimators', 'rfc__n_jobs', 'rfc__oob_score', 'rfc__random_state', 'rfc__verbose', 'rfc__warm_start'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(full_pipe.get_params().keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
