Ajout de commentaires

--- a/Pipelines.ipynb
+++ b/Pipelines.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cat_columns=[]\n",
+    "num_columns=[]\n",
+    "\n",
+    "categorical_pipe = Pipeline([\n",
+    "    ('imputer', SimpleImputer()),\n",
+    "    ('onehot', OneHotEncoder())\n",
+    "])\n",
+    "\n",
+    "numeric_pipe = Pipeline([\n",
+    "    ('imputer', SimpleImputer(fill_value=0)),\n",
+    "    ('scaler', StandardScaler())\n",
+    "])\n",
+    "\n",
+    "preprocess_pipe = ColumnTransformer([\n",
+    "    ('cat', categorical_pipe, cat_columns),\n",
+    "    ('num', numeric_pipe, num_columns)])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Les pipelines forment une arborescence de methodes et de paramêtres."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -65,34 +96,26 @@
        "                  verbose=False)"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cat_columns=[]\n",
-    "num_columns=[]\n",
-    "\n",
-    "categorical_pipe = Pipeline([\n",
-    "    ('imputer', SimpleImputer()),\n",
-    "    ('onehot', OneHotEncoder())\n",
-    "])\n",
-    "\n",
-    "numeric_pipe = Pipeline([\n",
-    "    ('imputer', SimpleImputer(fill_value=0)),\n",
-    "    ('scaler', StandardScaler())\n",
-    "])\n",
-    "\n",
-    "preprocess_pipe = ColumnTransformer([\n",
-    "    ('cat', categorical_pipe, cat_columns),\n",
-    "    ('num', numeric_pipe, num_columns)])\n",
     "preprocess_pipe"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Les Pipelines exposent l'ensemble des parametres de chaque 'sous pipeline'. On peut utiliser set_param pour les modifier.\n",
+    "Chaque hyperparametre peut etre utiliser dans un gridsearch."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -108,23 +131,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(preprocess_pipe.get_params()['num__imputer__fill_value'])"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -133,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +151,24 @@
     }
    ],
    "source": [
-    "full_pipe.set_params(num__imputer__fill_value=1)\n",
+    "print(preprocess_pipe.get_params()['num__imputer__fill_value'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "preprocess_pipe.set_params(num__imputer__fill_value=1)\n",
     "print(preprocess_pipe.get_params()['num__imputer__fill_value'])"
    ]
   },
@@ -153,13 +176,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Les Pipelines exposent l'ensemble des parametres de chaque 'sous pipeline'. On peut utiliser set_param pour les modifier.\n",
-    "Chaque hyperparametre peut etre utiliser dans un gridsearch."
+    "pipeline complet avec preprocessing et modele"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
