--- a/Pipelines.ipynb
+++ b/Pipelines.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Preprocessing avec Scikit Learn"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +17,59 @@
     "from sklearn.impute import SimpleImputer\n",
     "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
     "from sklearn.compose import ColumnTransformer\n",
-    "from sklearn.ensemble import RandomForestClassifier as rfc"
+    "from sklearn.ensemble import RandomForestClassifier as rfc\n",
+    "from pprint import pprint"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Les methodes de preprocessing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "fit transform"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## SimpleImputer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Strategy\n",
+    "fill_value\n",
+    "missing_value"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## OneHotEncoder"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## StandardScaler"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Autres?"
    ]
   },
   {
@@ -21,23 +80,210 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pipeline pour les features catégoriques"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pipeline prend en parametres une liste de tuples (nom, transform) qui définie une séquence de transformations."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "categorical_pipe = Pipeline([\n",
+    "    ('imputer', SimpleImputer(strategy='most_frequent')),\n",
+    "    ('onehot', OneHotEncoder())\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Les pipelines forment une arborescence de methodes et de paramêtres.\n",
+    "- Les pipelines exposent l'ensemble des paramètres."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Pipeline(memory=None,\n",
+       "         steps=[('imputer',\n",
+       "                 SimpleImputer(add_indicator=False, copy=True, fill_value=None,\n",
+       "                               missing_values=nan, strategy='most_frequent',\n",
+       "                               verbose=0)),\n",
+       "                ('onehot',\n",
+       "                 OneHotEncoder(categories='auto', drop=None,\n",
+       "                               dtype=<class 'numpy.float64'>,\n",
+       "                               handle_unknown='error', sparse=True))],\n",
+       "         verbose=False)"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "categorical_pipe"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Les paramètres sont préfixés par le nom donné dans le tuple.\n",
+    "- On peut utiliser get_param pour obtenir les paramètres.\n",
+    "- On peut utiliser set_param pour les modifier.\n",
+    "- Attention, il y'a 2 underscore!\n",
+    "- Chaque hyperparamètre pourra être optimisé."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'imputer': SimpleImputer(add_indicator=False, copy=True, fill_value=None,\n",
+      "              missing_values=nan, strategy='most_frequent', verbose=0),\n",
+      " 'imputer__add_indicator': False,\n",
+      " 'imputer__copy': True,\n",
+      " 'imputer__fill_value': None,\n",
+      " 'imputer__missing_values': nan,\n",
+      " 'imputer__strategy': 'most_frequent',\n",
+      " 'imputer__verbose': 0,\n",
+      " 'memory': None,\n",
+      " 'onehot': OneHotEncoder(categories='auto', drop=None, dtype=<class 'numpy.float64'>,\n",
+      "              handle_unknown='error', sparse=True),\n",
+      " 'onehot__categories': 'auto',\n",
+      " 'onehot__drop': None,\n",
+      " 'onehot__dtype': <class 'numpy.float64'>,\n",
+      " 'onehot__handle_unknown': 'error',\n",
+      " 'onehot__sparse': True,\n",
+      " 'steps': [('imputer',\n",
+      "            SimpleImputer(add_indicator=False, copy=True, fill_value=None,\n",
+      "              missing_values=nan, strategy='most_frequent', verbose=0)),\n",
+      "           ('onehot',\n",
+      "            OneHotEncoder(categories='auto', drop=None, dtype=<class 'numpy.float64'>,\n",
+      "              handle_unknown='error', sparse=True))],\n",
+      " 'verbose': False}\n"
+     ]
+    }
+   ],
+   "source": [
+    "pprint(categorical_pipe.get_params())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'most_frequent'"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "categorical_pipe.get_params()['imputer__strategy']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Pipeline(memory=None,\n",
+       "         steps=[('imputer',\n",
+       "                 SimpleImputer(add_indicator=False, copy=True, fill_value='NA',\n",
+       "                               missing_values=nan, strategy='constant',\n",
+       "                               verbose=0)),\n",
+       "                ('onehot',\n",
+       "                 OneHotEncoder(categories='auto', drop=None,\n",
+       "                               dtype=<class 'numpy.float64'>,\n",
+       "                               handle_unknown='error', sparse=True))],\n",
+       "         verbose=False)"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "categorical_pipe.set_params(imputer__strategy='constant', imputer__fill_value='NA')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pipeline pour les features numériques"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numeric_pipe = Pipeline([\n",
+    "    ('imputer', SimpleImputer(strategy='median')),\n",
+    "    ('scaler', StandardScaler())\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ColumnTransformer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ColumnTransformer permet de combiner des traitements differents pour chaque groupe de colonnes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
     "cat_columns=[]\n",
     "num_columns=[]\n",
-    "\n",
-    "categorical_pipe = Pipeline([\n",
-    "    ('imputer', SimpleImputer()),\n",
-    "    ('onehot', OneHotEncoder())\n",
-    "])\n",
-    "\n",
-    "numeric_pipe = Pipeline([\n",
-    "    ('imputer', SimpleImputer(fill_value=0)),\n",
-    "    ('scaler', StandardScaler())\n",
-    "])\n",
     "\n",
     "preprocess_pipe = ColumnTransformer([\n",
     "    ('cat', categorical_pipe, cat_columns),\n",
@@ -48,140 +294,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Les pipelines forment une arborescence de methodes et de paramêtres."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "ColumnTransformer(n_jobs=None, remainder='drop', sparse_threshold=0.3,\n",
-       "                  transformer_weights=None,\n",
-       "                  transformers=[('cat',\n",
-       "                                 Pipeline(memory=None,\n",
-       "                                          steps=[('imputer',\n",
-       "                                                  SimpleImputer(add_indicator=False,\n",
-       "                                                                copy=True,\n",
-       "                                                                fill_value=None,\n",
-       "                                                                missing_values=nan,\n",
-       "                                                                strategy='mean',\n",
-       "                                                                verbose=0)),\n",
-       "                                                 ('onehot',\n",
-       "                                                  OneHotEncoder(categories='auto',\n",
-       "                                                                drop=None,\n",
-       "                                                                dtype=<class 'numpy.float64'>,\n",
-       "                                                                handle_unknown='error',\n",
-       "                                                                sparse=True))],\n",
-       "                                          verbose=False),\n",
-       "                                 []),\n",
-       "                                ('num',\n",
-       "                                 Pipeline(memory=None,\n",
-       "                                          steps=[('imputer',\n",
-       "                                                  SimpleImputer(add_indicator=False,\n",
-       "                                                                copy=True,\n",
-       "                                                                fill_value=0,\n",
-       "                                                                missing_values=nan,\n",
-       "                                                                strategy='mean',\n",
-       "                                                                verbose=0)),\n",
-       "                                                 ('scaler',\n",
-       "                                                  StandardScaler(copy=True,\n",
-       "                                                                 with_mean=True,\n",
-       "                                                                 with_std=True))],\n",
-       "                                          verbose=False),\n",
-       "                                 [])],\n",
-       "                  verbose=False)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "preprocess_pipe"
+    "## Pipeline complet"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Les Pipelines exposent l'ensemble des parametres de chaque 'sous pipeline'. On peut utiliser set_param pour les modifier.\n",
-    "Chaque hyperparametre peut etre utiliser dans un gridsearch."
+    "Pipeline complet avec preprocessing et modèle"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "dict_keys(['n_jobs', 'remainder', 'sparse_threshold', 'transformer_weights', 'transformers', 'verbose', 'cat', 'num', 'cat__memory', 'cat__steps', 'cat__verbose', 'cat__imputer', 'cat__onehot', 'cat__imputer__add_indicator', 'cat__imputer__copy', 'cat__imputer__fill_value', 'cat__imputer__missing_values', 'cat__imputer__strategy', 'cat__imputer__verbose', 'cat__onehot__categories', 'cat__onehot__drop', 'cat__onehot__dtype', 'cat__onehot__handle_unknown', 'cat__onehot__sparse', 'num__memory', 'num__steps', 'num__verbose', 'num__imputer', 'num__scaler', 'num__imputer__add_indicator', 'num__imputer__copy', 'num__imputer__fill_value', 'num__imputer__missing_values', 'num__imputer__strategy', 'num__imputer__verbose', 'num__scaler__copy', 'num__scaler__with_mean', 'num__scaler__with_std'])\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(preprocess_pipe.get_params().keys())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "On peut changer les paramatres défini par défaut"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(preprocess_pipe.get_params()['num__imputer__fill_value'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n"
-     ]
-    }
-   ],
-   "source": [
-    "preprocess_pipe.set_params(num__imputer__fill_value=1)\n",
-    "print(preprocess_pipe.get_params()['num__imputer__fill_value'])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "pipeline complet avec preprocessing et modele"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,20 +319,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Demo sur un dataset?"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "dict_keys(['memory', 'steps', 'verbose', 'pp', 'rfc', 'pp__n_jobs', 'pp__remainder', 'pp__sparse_threshold', 'pp__transformer_weights', 'pp__transformers', 'pp__verbose', 'pp__cat', 'pp__num', 'pp__cat__memory', 'pp__cat__steps', 'pp__cat__verbose', 'pp__cat__imputer', 'pp__cat__onehot', 'pp__cat__imputer__add_indicator', 'pp__cat__imputer__copy', 'pp__cat__imputer__fill_value', 'pp__cat__imputer__missing_values', 'pp__cat__imputer__strategy', 'pp__cat__imputer__verbose', 'pp__cat__onehot__categories', 'pp__cat__onehot__drop', 'pp__cat__onehot__dtype', 'pp__cat__onehot__handle_unknown', 'pp__cat__onehot__sparse', 'pp__num__memory', 'pp__num__steps', 'pp__num__verbose', 'pp__num__imputer', 'pp__num__scaler', 'pp__num__imputer__add_indicator', 'pp__num__imputer__copy', 'pp__num__imputer__fill_value', 'pp__num__imputer__missing_values', 'pp__num__imputer__strategy', 'pp__num__imputer__verbose', 'pp__num__scaler__copy', 'pp__num__scaler__with_mean', 'pp__num__scaler__with_std', 'rfc__bootstrap', 'rfc__ccp_alpha', 'rfc__class_weight', 'rfc__criterion', 'rfc__max_depth', 'rfc__max_features', 'rfc__max_leaf_nodes', 'rfc__max_samples', 'rfc__min_impurity_decrease', 'rfc__min_impurity_split', 'rfc__min_samples_leaf', 'rfc__min_samples_split', 'rfc__min_weight_fraction_leaf', 'rfc__n_estimators', 'rfc__n_jobs', 'rfc__oob_score', 'rfc__random_state', 'rfc__verbose', 'rfc__warm_start'])\n"
+     "ename": "NameError",
+     "evalue": "name 'X_train' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-62-420b62aef106>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0my_train_pred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfull_pipe\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit_transform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0my_valid_pred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfull_pipe\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtransform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_valid\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0my_test_pred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfull_pipe\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtransform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'X_train' is not defined"
      ]
     }
    ],
    "source": [
-    "print(full_pipe.get_params().keys())"
+    "y_train_pred = full_pipe.fit_transform(X_train)\n",
+    "\n",
+    "y_valid_pred = full_pipe.transform(X_valid)\n",
+    "y_test_pred = full_pipe.transform(X_test)"
    ]
   },
   {
