--- a/Pipelines.ipynb
+++ b/Pipelines.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,8 @@
     "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
     "from sklearn.compose import ColumnTransformer\n",
     "from sklearn.ensemble import RandomForestClassifier as rfc\n",
-    "from pprint import pprint"
+    "from pprint import pprint\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -32,7 +33,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "fit transform"
+    "Toutes les méthodes de preprocessing suivent le même processus:   \n",
+    "1- On crée une instance de la méthode.   \n",
+    "2- On fit cette instance sur un dataset avec .fit()  \n",
+    "3- On applique la même transformation sur n'importe quel dataset avec .transform()  "
    ]
   },
   {
@@ -46,9 +50,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Strategy\n",
-    "fill_value\n",
-    "missing_value"
+    "SimpleImputer sert à compléter les valeurs manquantes.\n",
+    "Les paramètres principaux de cette méthode sont:\n",
+    "- missing_value: Valeur à remplacer\n",
+    "- strategy:\n",
+    "    - \"mean\" (default): remplace toutes les missing_values par la moyenne de la colonne. Seulement sur les features numériques.\n",
+    "    - \"median\": remplace toutes les missing_values par la médiane de la colonne. Seulement sur les features numériques.\n",
+    "    - \"most_frequent\": remplace toutes les missing_values par la valeur la plus présente dans la colonne. Seulement sur les features numériques.\n",
+    "    - \"constant\": remplace toutes les missing_values par la valeur du paramètre fill_value\n",
+    "- fill_value: valeur qui remplace les missing_values si strategy = \"constant\"\n"
    ]
   },
   {
@@ -62,7 +72,61 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "One hot encoder"
+    "OneHotEncoder est utilisé pour encoder les variables catégorielles en variables numériques binaires.  \n",
+    "Les paramètres principaux de cette méthode sont:\n",
+    "- \"categories\": \n",
+    "    - \"auto\" détermine automatiquement les différentes catégories en se basant sur celes présentes dans le dataset passé en fit. \n",
+    "    - On peut également lui passer une liste de catégories.\n",
+    "- \"drop\": drop un des features\n",
+    "    - \"first\": drop le premier feature\n",
+    "    -  On peut aussi lui préciser quel feature dropper.\n",
+    "- \"handle_unknown\": \n",
+    "    - \"ignore\": ne peut être utilisé si drop est précisé. Si l'encoder rencontre une valeur inconnue dans le dataset à transformer ,il remplira toutes les colonnes créées avec des zéros.\n",
+    "    - \"error\": l'encodeur lèvera une erreur lorsqu'il rencontrera une nouvelle valeur."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X =[['Cat'], ['Dog'], ['Python']]\n",
+    "X1 = [['Dog'], ['Python'], ['Cat'], ['Cat'], ['Python']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "encode = OneHotEncoder(handle_unknown=\"ignore\")\n",
+    "encoder.fit(X)\n",
+    "encoder.transform(X1).toarray()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "encoder_drop = OneHotEncoder(drop=\"first\")\n",
+    "encoder_drop.fit(X)\n",
+    "encoder_drop.transform(X1).toarray()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X1.append(['Anaconda'])\n",
+    "encoder_handle_unknown = OneHotEncoder(handle_unknown=\"ignore\")\n",
+    "encoder_handle_unknown.fit(X)\n",
+    "encoder_handle_unknown.transform(X1).toarray()"
    ]
   },
   {
@@ -102,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,29 +186,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Pipeline(memory=None,\n",
-       "         steps=[('imputer',\n",
-       "                 SimpleImputer(add_indicator=False, copy=True, fill_value=None,\n",
-       "                               missing_values=nan, strategy='most_frequent',\n",
-       "                               verbose=0)),\n",
-       "                ('onehot',\n",
-       "                 OneHotEncoder(categories='auto', drop=None,\n",
-       "                               dtype=<class 'numpy.float64'>,\n",
-       "                               handle_unknown='error', sparse=True))],\n",
-       "         verbose=False)"
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "categorical_pipe"
    ]
@@ -162,90 +206,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'imputer': SimpleImputer(add_indicator=False, copy=True, fill_value=None,\n",
-      "              missing_values=nan, strategy='most_frequent', verbose=0),\n",
-      " 'imputer__add_indicator': False,\n",
-      " 'imputer__copy': True,\n",
-      " 'imputer__fill_value': None,\n",
-      " 'imputer__missing_values': nan,\n",
-      " 'imputer__strategy': 'most_frequent',\n",
-      " 'imputer__verbose': 0,\n",
-      " 'memory': None,\n",
-      " 'onehot': OneHotEncoder(categories='auto', drop=None, dtype=<class 'numpy.float64'>,\n",
-      "              handle_unknown='error', sparse=True),\n",
-      " 'onehot__categories': 'auto',\n",
-      " 'onehot__drop': None,\n",
-      " 'onehot__dtype': <class 'numpy.float64'>,\n",
-      " 'onehot__handle_unknown': 'error',\n",
-      " 'onehot__sparse': True,\n",
-      " 'steps': [('imputer',\n",
-      "            SimpleImputer(add_indicator=False, copy=True, fill_value=None,\n",
-      "              missing_values=nan, strategy='most_frequent', verbose=0)),\n",
-      "           ('onehot',\n",
-      "            OneHotEncoder(categories='auto', drop=None, dtype=<class 'numpy.float64'>,\n",
-      "              handle_unknown='error', sparse=True))],\n",
-      " 'verbose': False}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "pprint(categorical_pipe.get_params())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'most_frequent'"
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "categorical_pipe.get_params()['imputer__strategy']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Pipeline(memory=None,\n",
-       "         steps=[('imputer',\n",
-       "                 SimpleImputer(add_indicator=False, copy=True, fill_value='NA',\n",
-       "                               missing_values=nan, strategy='constant',\n",
-       "                               verbose=0)),\n",
-       "                ('onehot',\n",
-       "                 OneHotEncoder(categories='auto', drop=None,\n",
-       "                               dtype=<class 'numpy.float64'>,\n",
-       "                               handle_unknown='error', sparse=True))],\n",
-       "         verbose=False)"
-      ]
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "categorical_pipe.set_params(imputer__strategy='constant', imputer__fill_value='NA')"
    ]
@@ -259,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,21 +317,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'X_train' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-62-420b62aef106>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0my_train_pred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfull_pipe\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit_transform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0my_valid_pred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfull_pipe\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtransform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_valid\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0my_test_pred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfull_pipe\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtransform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'X_train' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "y_train_pred = full_pipe.fit_transform(X_train)\n",
     "\n",
