Ajout de demo sur House Prices

--- a/Pipelines.ipynb
+++ b/Pipelines.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,8 +17,12 @@
     "from sklearn.impute import SimpleImputer\n",
     "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
     "from sklearn.compose import ColumnTransformer\n",
-    "from sklearn.ensemble import RandomForestClassifier as rfc\n",
-    "from pprint import pprint"
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from pandas import DataFrame, read_csv\n",
+    "from pprint import pprint\n",
+    "import seaborn as sns\n",
+    "from matplotlib import pyplot as plt"
    ]
   },
   {
@@ -90,7 +94,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Pipeline pour les features catégoriques"
+    "## Pipeline pour les features catégorielles"
    ]
   },
   {
@@ -102,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,29 +126,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Pipeline(memory=None,\n",
-       "         steps=[('imputer',\n",
-       "                 SimpleImputer(add_indicator=False, copy=True, fill_value=None,\n",
-       "                               missing_values=nan, strategy='most_frequent',\n",
-       "                               verbose=0)),\n",
-       "                ('onehot',\n",
-       "                 OneHotEncoder(categories='auto', drop=None,\n",
-       "                               dtype=<class 'numpy.float64'>,\n",
-       "                               handle_unknown='error', sparse=True))],\n",
-       "         verbose=False)"
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "categorical_pipe"
    ]
@@ -162,90 +146,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'imputer': SimpleImputer(add_indicator=False, copy=True, fill_value=None,\n",
-      "              missing_values=nan, strategy='most_frequent', verbose=0),\n",
-      " 'imputer__add_indicator': False,\n",
-      " 'imputer__copy': True,\n",
-      " 'imputer__fill_value': None,\n",
-      " 'imputer__missing_values': nan,\n",
-      " 'imputer__strategy': 'most_frequent',\n",
-      " 'imputer__verbose': 0,\n",
-      " 'memory': None,\n",
-      " 'onehot': OneHotEncoder(categories='auto', drop=None, dtype=<class 'numpy.float64'>,\n",
-      "              handle_unknown='error', sparse=True),\n",
-      " 'onehot__categories': 'auto',\n",
-      " 'onehot__drop': None,\n",
-      " 'onehot__dtype': <class 'numpy.float64'>,\n",
-      " 'onehot__handle_unknown': 'error',\n",
-      " 'onehot__sparse': True,\n",
-      " 'steps': [('imputer',\n",
-      "            SimpleImputer(add_indicator=False, copy=True, fill_value=None,\n",
-      "              missing_values=nan, strategy='most_frequent', verbose=0)),\n",
-      "           ('onehot',\n",
-      "            OneHotEncoder(categories='auto', drop=None, dtype=<class 'numpy.float64'>,\n",
-      "              handle_unknown='error', sparse=True))],\n",
-      " 'verbose': False}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "pprint(categorical_pipe.get_params())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'most_frequent'"
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "categorical_pipe.get_params()['imputer__strategy']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Pipeline(memory=None,\n",
-       "         steps=[('imputer',\n",
-       "                 SimpleImputer(add_indicator=False, copy=True, fill_value='NA',\n",
-       "                               missing_values=nan, strategy='constant',\n",
-       "                               verbose=0)),\n",
-       "                ('onehot',\n",
-       "                 OneHotEncoder(categories='auto', drop=None,\n",
-       "                               dtype=<class 'numpy.float64'>,\n",
-       "                               handle_unknown='error', sparse=True))],\n",
-       "         verbose=False)"
-      ]
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "categorical_pipe.set_params(imputer__strategy='constant', imputer__fill_value='NA')"
    ]
@@ -259,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,12 +208,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cat_columns=[]\n",
-    "num_columns=[]\n",
+    "cat_columns=['Fence', 'CentralAir']\n",
+    "num_columns=['GrLivArea', 'LotFrontage', 'LotArea']\n",
     "\n",
     "preprocess_pipe = ColumnTransformer([\n",
     "    ('cat', categorical_pipe, cat_columns),\n",
@@ -313,15 +236,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = rfc()\n",
+    "model = LinearRegression()\n",
     "\n",
     "full_pipe = Pipeline(\n",
     "    [('pp', preprocess_pipe),\n",
-    "    ('rfc', model)]\n",
+    "    ('reg', model)]\n",
     ")"
    ]
   },
@@ -334,26 +257,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'X_train' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-62-420b62aef106>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0my_train_pred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfull_pipe\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit_transform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0my_valid_pred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfull_pipe\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtransform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_valid\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0my_test_pred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfull_pipe\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtransform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'X_train' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "y_train_pred = full_pipe.fit_transform(X_train)\n",
-    "\n",
-    "y_valid_pred = full_pipe.transform(X_valid)\n",
-    "y_test_pred = full_pipe.transform(X_test)"
+    "train_df = read_csv('./train.csv')\n",
+    "test_df = read_csv('./test.csv')\n",
+    "X = train_df[['GrLivArea', 'LotFrontage', 'LotArea', 'Fence', 'CentralAir']]\n",
+    "y = train_df[['SalePrice']]\n",
+    "X.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_valid, y_train, y_valid = train_test_split(X, y, test_size=0.2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "En une seule ligne:\n",
+    "- Preprocessing des features numériques et catégorielles\n",
+    "- Entrainement du modèle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "full_pipe.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Preprocessing\n",
+    "- Prediction sur le validation set et le test set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_train_pred = full_pipe.predict(X_train)\n",
+    "y_valid_pred = full_pipe.predict(X_valid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = DataFrame(data={'value':y_valid['SalePrice'], 'predicted':y_valid_pred.reshape(-1,)}, index=y_valid.index)\n",
+    "plt.figure(figsize=(15,10))\n",
+    "sns.scatterplot(x='value',y='predicted', data=df )\n",
+    "plt.show()"
    ]
   },
   {
