--- a/Pipelines.ipynb
+++ b/Pipelines.ipynb
@@ -9,17 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.impute import SimpleImputer\n",
-    "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
+    "from sklearn.preprocessing import StandardScaler, OneHotEncoder, MinMaxScaler, Normalizer, QuantileTransformer, FunctionTransformer\n",
     "from sklearn.compose import ColumnTransformer\n",
     "from sklearn.ensemble import RandomForestClassifier as rfc\n",
     "from pprint import pprint\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
@@ -87,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,20 +98,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 1., 0.],\n",
+       "       [0., 0., 1.],\n",
+       "       [1., 0., 0.],\n",
+       "       [1., 0., 0.],\n",
+       "       [0., 0., 1.]])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "encode = OneHotEncoder(handle_unknown=\"ignore\")\n",
+    "encoder = OneHotEncoder(handle_unknown=\"ignore\")\n",
     "encoder.fit(X)\n",
     "encoder.transform(X1).toarray()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0.],\n",
+       "       [0., 1.],\n",
+       "       [0., 0.],\n",
+       "       [0., 0.],\n",
+       "       [0., 1.]])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "encoder_drop = OneHotEncoder(drop=\"first\")\n",
     "encoder_drop.fit(X)\n",
@@ -119,9 +150,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 1., 0.],\n",
+       "       [0., 0., 1.],\n",
+       "       [1., 0., 0.],\n",
+       "       [1., 0., 0.],\n",
+       "       [0., 0., 1.],\n",
+       "       [0., 0., 0.]])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "X1.append(['Anaconda'])\n",
     "encoder_handle_unknown = OneHotEncoder(handle_unknown=\"ignore\")\n",
@@ -140,7 +187,178 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Autres?"
+    "Les différents modules Sklearn de preprocessing sont disponibles à :\n",
+    "https://scikit-learn.org/stable/modules/classes.html#module-sklearn.preprocessing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = [[-1, 2], \n",
+    "        [-0.5, 6], \n",
+    "        [0, 10], \n",
+    "        [1, 18]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### MinMaxScaler"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Permet de transposer les valeur d'un dataframe sur un range choisie."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.  , 0.  ],\n",
+       "       [0.25, 0.25],\n",
+       "       [0.5 , 0.5 ],\n",
+       "       [1.  , 1.  ]])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data1 = data\n",
+    "scaler = MinMaxScaler() #feature_range = [2,4])\n",
+    "scaler.fit_transform(data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Normalizer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Permet d'appliquer de la normalisation sur un dataframe.<br />\n",
+    "Fonctionne avec Dense et spicy.matrix.<br />\n",
+    "‘l1’, ‘l2’, ‘max’"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.33333333,  0.66666667],\n",
+       "       [-0.07692308,  0.92307692],\n",
+       "       [ 0.        ,  1.        ],\n",
+       "       [ 0.05263158,  0.94736842]])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data2 = data\n",
+    "normalizer = Normalizer(norm = 'l1')\n",
+    "normalizer.fit_transform(data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Quantile Transformer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Permet de générer des quantiles à partir d'un dataframe."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.        , 0.        ],\n",
+       "       [0.33333333, 0.33333333],\n",
+       "       [0.6       , 0.6       ],\n",
+       "       [1.        , 1.        ]])"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data3 = data\n",
+    "quantiletransformer = QuantileTransformer(n_quantiles=3, random_state=0)\n",
+    "quantiletransformer.fit_transform(data3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Function Transformer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Permet d'appliquer n'importe quelle fonction sur un dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[       -inf,  1.09861229],\n",
+       "       [-0.69314718,  1.94591015],\n",
+       "       [ 0.        ,  2.39789527],\n",
+       "       [ 0.69314718,  2.94443898]])"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data4 = data\n",
+    "functiontransformer = FunctionTransformer(np.log1p)\n",
+    "functiontransformer.fit_transform(data4)"
    ]
   },
   {
@@ -166,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,9 +404,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Pipeline(memory=None,\n",
+       "         steps=[('imputer',\n",
+       "                 SimpleImputer(add_indicator=False, copy=True, fill_value=None,\n",
+       "                               missing_values=nan, strategy='most_frequent',\n",
+       "                               verbose=0)),\n",
+       "                ('onehot',\n",
+       "                 OneHotEncoder(categories='auto', drop=None,\n",
+       "                               dtype=<class 'numpy.float64'>,\n",
+       "                               handle_unknown='error', sparse=True))],\n",
+       "         verbose=False)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "categorical_pipe"
    ]
@@ -206,29 +444,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'imputer': SimpleImputer(add_indicator=False, copy=True, fill_value=None,\n",
+      "              missing_values=nan, strategy='most_frequent', verbose=0),\n",
+      " 'imputer__add_indicator': False,\n",
+      " 'imputer__copy': True,\n",
+      " 'imputer__fill_value': None,\n",
+      " 'imputer__missing_values': nan,\n",
+      " 'imputer__strategy': 'most_frequent',\n",
+      " 'imputer__verbose': 0,\n",
+      " 'memory': None,\n",
+      " 'onehot': OneHotEncoder(categories='auto', drop=None, dtype=<class 'numpy.float64'>,\n",
+      "              handle_unknown='error', sparse=True),\n",
+      " 'onehot__categories': 'auto',\n",
+      " 'onehot__drop': None,\n",
+      " 'onehot__dtype': <class 'numpy.float64'>,\n",
+      " 'onehot__handle_unknown': 'error',\n",
+      " 'onehot__sparse': True,\n",
+      " 'steps': [('imputer',\n",
+      "            SimpleImputer(add_indicator=False, copy=True, fill_value=None,\n",
+      "              missing_values=nan, strategy='most_frequent', verbose=0)),\n",
+      "           ('onehot',\n",
+      "            OneHotEncoder(categories='auto', drop=None, dtype=<class 'numpy.float64'>,\n",
+      "              handle_unknown='error', sparse=True))],\n",
+      " 'verbose': False}\n"
+     ]
+    }
+   ],
    "source": [
     "pprint(categorical_pipe.get_params())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'most_frequent'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "categorical_pipe.get_params()['imputer__strategy']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Pipeline(memory=None,\n",
+       "         steps=[('imputer',\n",
+       "                 SimpleImputer(add_indicator=False, copy=True, fill_value='NA',\n",
+       "                               missing_values=nan, strategy='constant',\n",
+       "                               verbose=0)),\n",
+       "                ('onehot',\n",
+       "                 OneHotEncoder(categories='auto', drop=None,\n",
+       "                               dtype=<class 'numpy.float64'>,\n",
+       "                               handle_unknown='error', sparse=True))],\n",
+       "         verbose=False)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "categorical_pipe.set_params(imputer__strategy='constant', imputer__fill_value='NA')"
    ]
@@ -242,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,9 +616,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'X_train' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-16-420b62aef106>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0my_train_pred\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfull_pipe\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit_transform\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0my_valid_pred\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfull_pipe\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtransform\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_valid\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0my_test_pred\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfull_pipe\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtransform\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_test\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'X_train' is not defined"
+     ]
+    }
+   ],
    "source": [
     "y_train_pred = full_pipe.fit_transform(X_train)\n",
     "\n",
