--- a/Pipelines.ipynb
+++ b/Pipelines.ipynb
@@ -19,7 +19,8 @@
     "from sklearn.compose import ColumnTransformer\n",
     "from sklearn.ensemble import RandomForestClassifier as rfc\n",
     "from pprint import pprint\n",
-    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "from matplotlib import pyplot as plt\n",
     "import numpy as np"
    ]
   },
