--- a/Pipelines.ipynb
+++ b/Pipelines.ipynb
@@ -10,7 +10,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hide_input": false
+   },
    "outputs": [],
    "source": [
     "from sklearn.pipeline import Pipeline\n",
