--- a/Pipelines.ipynb
+++ b/Pipelines.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,15 +229,55 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "Le StandardScaler transforme les données pour les présenter sous une distribution Gaussienne, avec une moyenne de zéro et une unit variance. C'est important de l'utiliser pour des modèles type SVM, RBF Kernel (qui utilise la distance euclidienne), mais aussi les régularisation L1 et L2 des modèles linéaires.\n",
+    "\n",
+    "Les valeurs manquantes ne sont pas regardées pendant l'entraînement, et sont resittuées comme tel lors de la transformation.\n",
+    "\n",
+    "Il existe deux paramètres importants qui sont True par défaut :\n",
+    "**with_mean** : centre les données avant de les scaler.\n",
+    "**with_std** : scale les données avec l'écart type."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-0.125  9.   ]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[-1.18321596, -1.18321596],\n",
+       "       [-0.50709255, -0.50709255],\n",
+       "       [ 0.16903085,  0.16903085],\n",
+       "       [ 1.52127766,  1.52127766]])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data = [[-1, 2], \n",
     "        [-0.5, 6], \n",
     "        [0, 10], \n",
-    "        [1, 18]]"
+    "        [1, 18]]\n",
+    "\n",
+    "data0 = data\n",
+    "scaler = StandardScaler()\n",
+    "scaler.fit(data)\n",
+    "print(scaler.mean_)\n",
+    "scaler.transform(data0)"
    ]
   },
   {
@@ -260,13 +300,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.  , 0.  ],\n",
+       "       [0.25, 0.25],\n",
+       "       [0.5 , 0.5 ],\n",
+       "       [1.  , 1.  ]])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data1 = data\n",
     "scaler = MinMaxScaler() #feature_range = [2,4])\n",
-    "scaler.fit_transform(data)"
+    "scaler.fit_transform(data1)"
    ]
   },
   {
@@ -291,13 +345,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.33333333,  0.66666667],\n",
+       "       [-0.07692308,  0.92307692],\n",
+       "       [ 0.        ,  1.        ],\n",
+       "       [ 0.05263158,  0.94736842]])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data2 = data\n",
     "normalizer = Normalizer(norm = 'l1')\n",
-    "normalizer.fit_transform(data)"
+    "normalizer.fit_transform(data2)"
    ]
   },
   {
